--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2022-05-28 11:20:57
+ * @LastEditTime: 2022-06-01 19:48:52
  * @Description: 
  * _(:з」∠)_
 -->
@@ -12,7 +12,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>BITself</title>
   <!--引入思源字体-->
   <link rel="stylesheet" href="https://fonts.loli.net/css?family=Noto+Serif+SC:100,300,400,500,700,900">
 </head>
