--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2022-07-10 14:31:39
+ * @LastEditTime: 2022-08-04 17:39:51
  * @Description: 
  * _(:з」∠)_
 -->
@@ -21,5 +21,15 @@
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
+
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?de1af35c78c09fec38632742181a9808";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>  
 
 </html>
