添加IOS添加至桌面图标link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2022-08-04 17:39:51
+ * @LastEditTime: 2022-08-12 01:50:05
  * @Description: 
  * _(:з」∠)_
 -->
@@ -15,6 +15,7 @@
   <title>BIT101</title>
   <!--引入思源字体-->
   <link rel="stylesheet" href="https://fonts.loli.net/css?family=Noto+Serif+SC:100,300,400,500,700,900">
+  <link rel="apple-touch-icon" href="/src/assets/logo.png"/>
 </head>
 
 <body>
