✅添加头像组件 头像小勾勾 帖子滚动自动加载

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2022-08-12 01:50:05
+ * @LastEditTime: 2023-10-17 21:53:42
  * @Description: 
  * _(:з」∠)_
 -->
@@ -15,7 +15,7 @@
   <title>BIT101</title>
   <!--引入思源字体-->
   <link rel="stylesheet" href="https://fonts.loli.net/css?family=Noto+Serif+SC:300,500,700,900">
-  <link rel="apple-touch-icon" href="/src/assets/logo.png"/>
+  <link rel="apple-touch-icon" href="/src/assets/logo.png" />
 </head>
 
 <body>
@@ -25,12 +25,18 @@
 
 <script>
   var _hmt = _hmt || [];
-  (function() {
+  (function () {
     var hm = document.createElement("script");
     hm.src = "https://hm.baidu.com/hm.js?de1af35c78c09fec38632742181a9808";
-    var s = document.getElementsByTagName("script")[0]; 
+    var s = document.getElementsByTagName("script")[0];
     s.parentNode.insertBefore(hm, s);
   })();
-  </script>  
+</script>
+
+<style>
+  html{
+    scroll-behavior: smooth;
+  }
+</style>
 
 </html>
