--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2023-10-21 13:14:50
+ * @LastEditTime: 2023-10-24 10:39:35
  * @Description: 
  * _(:з」∠)_
 -->
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BIT101</title>
   <!--引入思源字体-->
-  <link rel="stylesheet" href="https://fonts.loli.net/css?family=Noto+Serif+SC:300,500,700,900">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,500,700,900">
   <link rel="apple-touch-icon" href="/src/assets/logo.png" />
 </head>
 
