🤞禁止手动缩放

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2023-10-29 17:12:50
+ * @LastEditTime: 2023-11-02 03:02:40
  * @Description: 
  * _(:з」∠)_
 -->
@@ -11,11 +11,11 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BIT101</title>
   <meta name="description" content="BIT101校园社区">
   <link rel="apple-touch-icon" href="/pwa-512x512.png" />
   <meta name="theme-color" content="#FF9A57">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <!--引入思源字体-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,500,700,900">
 </head>
