--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#FF9A57">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <!--引入思源字体-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,500,700,900">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,500,700,900&display=swap" crossorigin as="style" onload="this.onload=null;this.rel='stylesheet'">
 </head>
 
 <body>
