--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: flwfdd
  * @Date: 2022-05-28 00:01:07
- * @LastEditTime: 2023-11-02 03:02:40
+ * @LastEditTime: 2024-12-08 00:27:02
  * @Description: 
  * _(:з」∠)_
 -->
@@ -19,6 +19,16 @@
   <!--引入思源字体-->
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,500,700,900&display=swap" crossorigin as="style" onload="this.onload=null;this.rel='stylesheet'">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1X4GFL2WXR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1X4GFL2WXR');
+</script>
 
 <body>
   <div id="app"></div>
